- In the Lifestyles tab, improvements that change lifestyle costs now display the actual source of the improvement (e.g. a quality like Dependents) instead of just the type of source.

Data Changes:
- Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
- The custom rulesets for Toxic traditions having no requirements and for Painade being available per the German version of Cutting Aces now load and work properly.

Changed/New Strings:
- String_RestrictedItemsHidden

Build 212
Application Changes:
- When entering Nuyen and Karma expenses for Working for the Man/People, it's now possible to flag the expense entry as always being present in the Expense log. This will in effect reduce the Career Karma or Career Nuyen by the selected amount. Closes #4096, closes #3613
- Added InitiationGroup, InitiationOrdeal and InitiationSchooling option values for Submersion and Initiation respectively. Ensures that values are correct across multiple locations. Currently not exposed to user change. 
- Traditions that have an empty Drain value will automatically be permitted to choose their drain attribute. Allows the Toxic tradition to select the Drain attributes to use.
- Added contributetobp property to Qualities as an accessible property via XML. Allows for a quality to contribute to your Limit, but not consume karma during character creation. Has no effect during career mode. 
- Exposed Note-fetching mechanism to Armor, Armor Mods, Cyberware, Gear, Lifestyle Qualities, Vehicles, Vehicle Mods, Weapons, and Weapon Accessories. When created, Chummer will attempt to fetch relevant text from the PDF, if it is linked.
- Altered behaviour of special attributes having an effective metatype minimum below zero during character creation that requires spending additional priority points. 
- Added an optional rule to preserve existing behaviour.
- Merged karma cost checks for Foci into the Focus object instead of separate Create and Career methods.