@@ -16,6 +16,7 @@ Application Fixes:
 - Weapon accessories on weapons mounted on vehicles now display their stat modifiers.
 - Dicepools for weapons no longer display two different values when the character has a relevant specialization. Hovering over the dicepool labels will still list a specialization as the source for +2 bonus if the character does indeed have a relevant specialization.
 - In the Lifestyles tab, improvements that change lifestyle costs now display the actual source of the improvement (e.g. a quality like Dependents) instead of just the type of source.
+- Weapon ratings are now saved and loaded properly.
 
 Data Changes:
 - Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
